Basic homepage donee. SStill not happy with the header image. Plus there are a few layout issues. One of them is the experience listing text content overflows below the image. Need to find out the image size for this

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -23,8 +23,22 @@
 .header
 {
   background: white;
-  min-height: 300px;
+  min-height: 350px;
   margin: 20px 0 0 0;
+
+  width: 100%;
+  height: 100%;
+  background-image:url("/assets/header.png");
+  background-position: top center;
+  background-size: cover;
+
+  .headerContent
+  {
+    //background: #000;
+    margin-top: 20px;
+    display: inline-block;
+    padding: 20px;
+  }
 }
 /************************************************************************/
 /* Content */
